--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   image_picker: ^1.0.7
   url_launcher: ^6.3.0
+  open_file: ^3.5.10
 
 dependency_overrides:
   web: ^1.0.0
