--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   syncfusion_flutter_pdf: ^29.2.11
   syncfusion_flutter_pdfviewer: ^29.2.11
-  pdf_render: ^1.2.3
+#  pdf_render: ^1.2.3
   file_picker: ^10.2.0
   uuid: ^4.1.0
   cupertino_icons: ^1.0.8
@@ -65,6 +65,7 @@ dependencies:
   image_picker: ^1.0.7
   url_launcher: ^6.3.0
   open_file: ^3.5.10
+  app_links: ^6.4.0
 
 dependency_overrides:
   web: ^1.0.0
